<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="claire.crunchtime.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#fef1f1"
    android:focusable="true">

    <EditText android:id="@+id/edit_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_reps"
        android:textAlignment="center"
        android:fontFamily="sans-serif-thin"
        android:layout_below="@+id/edit_weight"
        android:layout_alignStart="@+id/exercise"
        android:layout_toStartOf="@+id/textView" />

    <Spinner
        android:id="@+id/exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:spinnerMode="dropdown"
        android:entries="@array/exercise"
        android:layout_below="@+id/edit_reps"
        android:layout_alignStart="@+id/textView4"
        android:layout_toStartOf="@+id/buttonConvert" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_type"
        android:id="@+id/textView"
        android:focusable="false"
        android:fontFamily="sans-serif-thin"
        android:layout_above="@+id/exercise"
        android:layout_alignEnd="@+id/buttonConvert" />

    <EditText
        android:id="@+id/edit_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_reps"
        android:fontFamily="sans-serif-thin"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_toStartOf="@+id/textView2"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_text2"
        android:id="@+id/textView2"
        android:fontFamily="sans-serif-thin"
        android:layout_below="@+id/textView3"
        android:layout_toEndOf="@+id/exercise"
        android:layout_alignBottom="@+id/edit_calories" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Convert"
        android:id="@+id/buttonConvert"
        android:layout_alignBottom="@+id/exercise"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/exercise"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:background="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Result"
        android:id="@+id/textView3"
        android:layout_below="@+id/exercise"
        android:layout_alignStart="@+id/exercise"
        android:padding="15px"
        android:fontFamily="sans-serif-thin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_weight"
        android:hint="@string/edit_reps"
        android:textAlignment="center"
        android:fontFamily="sans-serif-thin"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/weight"
        android:id="@+id/textView4"
        android:fontFamily="sans-serif-thin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert2"
        android:id="@+id/button"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:background="#ffffff"
        android:layout_alignTop="@+id/scrollView"
        android:layout_alignEnd="@+id/textView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_calories"
        android:padding="15px"
        android:layout_alignEnd="@+id/textView3"
        android:measureAllChildren="false">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/done"
            android:id="@+id/textView10"
            android:fontFamily="sans-serif-thin" />

    </ScrollView>

</RelativeLayout>
